[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comb_v3_utils"
version = "0.0.1"
authors = [
  { name="Matthieu Broisin", email="matthieu.broisin@epfl.ch" },
]
description = "Comb V3 package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"